Blender 3.6 immediately crashes loading a GN hair model created in 3.5 #110107

Closed
opened 2023-07-14 15:35:56 +02:00 by Patrick-Rammelt · 1 comments

System Information
Operating system: Linux-5.14.21-150400.24.69-default-x86_64-with-glibc2.31 64 Bits, X11 UI
Graphics card: Mesa Intel(R) Graphics (RKL GT1) Intel 4.6 (Core Profile) Mesa 21.2.4

Blender Version
Broken: version: 3.6.1 Release Candidate, branch: blender-v3.6-release, commit date: 2023-07-13 21:11, hash: a8b82bd89e66
Worked: 3.5.1 RC

Short description of error
Blender 3.6 immediately crashes loading a GN hair model created in 3.5. Using only hair nodes distributed with 3.5. Nothing really fancy. The object and the GN nodes are not even active and wouldn't do anything here since the parent is empty (usually it would contain guide hair Curves).

Exact steps for others to reproduce the error
Load the attached blender file. For me blender crashes immediately (blender disappears, when started from a shell I see a segmentation fault error message and it also points to a log file which is empty). This is an extremely downstripped version of my model. The original takes a few seconds to load, however in 3.6.0 and 3.6.1 RC also the bigger original model crashes immediately.

**System Information** Operating system: Linux-5.14.21-150400.24.69-default-x86_64-with-glibc2.31 64 Bits, X11 UI Graphics card: Mesa Intel(R) Graphics (RKL GT1) Intel 4.6 (Core Profile) Mesa 21.2.4 **Blender Version** Broken: version: 3.6.1 Release Candidate, branch: blender-v3.6-release, commit date: 2023-07-13 21:11, hash: `a8b82bd89e66` Worked: 3.5.1 RC **Short description of error** Blender 3.6 immediately crashes loading a GN hair model created in 3.5. Using only hair nodes distributed with 3.5. Nothing really fancy. The object and the GN nodes are not even active and wouldn't do anything here since the parent is empty (usually it would contain guide hair Curves). **Exact steps for others to reproduce the error** Load the attached blender file. For me blender crashes immediately (blender disappears, when started from a shell I see a segmentation fault error message and it also points to a log file which is empty). This is an extremely downstripped version of my model. The original takes a few seconds to load, however in 3.6.0 and 3.6.1 RC also the bigger original model crashes immediately.
Patrick-Rammelt added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-14 15:35:56 +02:00

Same problem in 4.0.0 alpha.

Same problem in 4.0.0 alpha.
Hans Goudey added
Priority
High
Status
Confirmed
Type
Bug
and removed
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-07-14 16:40:23 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-14 16:46:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110107
There is no content yet.