Fix #110107: Subdivide curves crash with empty input